update tests expect

--- a/test/html/expect/test_package+custom_theme,ml/Include/index.html
+++ b/test/html/expect/test_package+custom_theme,ml/Include/index.html
@@ -22,63 +22,63 @@
    </h1>
   </header>
   <div class="content">
-   <div class="spec module-type" id="module-type-Not_inlined">
+   <div class="spec module-type lang-ocaml" id="module-type-Not_inlined">
     <a href="#module-type-Not_inlined" class="anchor"></a><code><span class="keyword">module</span> <span class="keyword">type</span> <a href="module-type-Not_inlined/index.html">Not_inlined</a> = <span class="keyword">sig</span> ... <span class="keyword">end</span></code>
    </div>
    <div>
-    <div class="spec include">
+    <div class="spec include lang-ocaml">
      <div class="doc">
       <details open="open">
        <summary>
         <span class="def"><code><span class="keyword">include</span> <a href="module-type-Not_inlined/index.html">Not_inlined</a></code></span>
        </summary>
-       <div class="spec type" id="type-t">
+       <div class="spec type lang-ocaml" id="type-t">
         <a href="#type-t" class="anchor"></a><code><span class="keyword">type</span> t</code>
        </div>
       </details>
      </div>
     </div>
    </div>
-   <div class="spec module-type" id="module-type-Inlined">
+   <div class="spec module-type lang-ocaml" id="module-type-Inlined">
     <a href="#module-type-Inlined" class="anchor"></a><code><span class="keyword">module</span> <span class="keyword">type</span> <a href="module-type-Inlined/index.html">Inlined</a> = <span class="keyword">sig</span> ... <span class="keyword">end</span></code>
    </div>
    <div>
-    <div class="spec include">
+    <div class="spec include lang-ocaml">
      <div class="doc">
-      <div class="spec type" id="type-u">
+      <div class="spec type lang-ocaml" id="type-u">
        <a href="#type-u" class="anchor"></a><code><span class="keyword">type</span> u</code>
       </div>
      </div>
     </div>
    </div>
-   <div class="spec module-type" id="module-type-Not_inlined_and_closed">
+   <div class="spec module-type lang-ocaml" id="module-type-Not_inlined_and_closed">
     <a href="#module-type-Not_inlined_and_closed" class="anchor"></a><code><span class="keyword">module</span> <span class="keyword">type</span> <a href="module-type-Not_inlined_and_closed/index.html">Not_inlined_and_closed</a> = <span class="keyword">sig</span> ... <span class="keyword">end</span></code>
    </div>
    <div>
-    <div class="spec include">
+    <div class="spec include lang-ocaml">
      <div class="doc">
       <details>
        <summary>
         <span class="def"><code><span class="keyword">include</span> <a href="module-type-Not_inlined_and_closed/index.html">Not_inlined_and_closed</a></code></span>
        </summary>
-       <div class="spec type" id="type-v">
+       <div class="spec type lang-ocaml" id="type-v">
         <a href="#type-v" class="anchor"></a><code><span class="keyword">type</span> v</code>
        </div>
       </details>
      </div>
     </div>
    </div>
-   <div class="spec module-type" id="module-type-Not_inlined_and_opened">
+   <div class="spec module-type lang-ocaml" id="module-type-Not_inlined_and_opened">
     <a href="#module-type-Not_inlined_and_opened" class="anchor"></a><code><span class="keyword">module</span> <span class="keyword">type</span> <a href="module-type-Not_inlined_and_opened/index.html">Not_inlined_and_opened</a> = <span class="keyword">sig</span> ... <span class="keyword">end</span></code>
    </div>
    <div>
-    <div class="spec include">
+    <div class="spec include lang-ocaml">
      <div class="doc">
       <details open="open">
        <summary>
         <span class="def"><code><span class="keyword">include</span> <a href="module-type-Not_inlined_and_opened/index.html">Not_inlined_and_opened</a></code></span>
        </summary>
-       <div class="spec type" id="type-w">
+       <div class="spec type lang-ocaml" id="type-w">
         <a href="#type-w" class="anchor"></a><code><span class="keyword">type</span> w</code>
        </div>
       </details>
