--- a/test/html/expect/test_package+re/Include/index.html
+++ b/test/html/expect/test_package+re/Include/index.html
@@ -11,6 +11,47 @@
   <script>
    hljs.initHighlightingOnLoad();
   </script>
+  <script>
+   document.addEventListener('DOMContentLoaded', () => {
+        const SYNTAXES = ['ocaml', 'reason']
+        const CLASS_PREFIX = 'syntax__'
+        const ocamlInputId = 'radio-ocaml'
+        const reasonInputId = 'radio-reason'
+        let $toggleSyntaxDiv = document.createElement('div')
+        let currentSyntax = localStorage.getItem('syntax') || SYNTAXES[0]
+        let checked = `checked="checked"`
+        
+        $toggleSyntaxDiv.innerHTML = `
+          <div style="float:right;">
+            <input type="radio" id="${ocamlInputId}" name="syntax" value="ocaml" ${currentSyntax == 'ocaml' ? checked : ""}>
+            <label for="${ocamlInputId}"><code>ml</code></label>
+            <input type="radio" id="${reasonInputId}" name="syntax" value="reason" ${currentSyntax == 'reason' ? checked : ""}>
+            <label for="${reasonInputId}"><code>re</code></label>
+          </div>
+        `.trim()
+        $toggleSyntaxDiv = $toggleSyntaxDiv.firstChild
+        document.querySelector('body > nav').appendChild($toggleSyntaxDiv);
+  
+        let setCurrentSyntax = (syntax) => {
+          document.body.classList.remove(`${CLASS_PREFIX}${currentSyntax}`)
+          document.body.classList.add(`${CLASS_PREFIX}${syntax}`)
+  
+          currentSyntax = syntax
+          localStorage.setItem('syntax', currentSyntax)
+        }
+  
+        setCurrentSyntax(currentSyntax)
+  
+        const $ocamlInputEl = document.getElementById(ocamlInputId);
+        $ocamlInputEl.addEventListener('click', (el) => {
+          setCurrentSyntax(el.target.value)
+        })
+        const $reasonInputEl = document.getElementById(reasonInputId)
+        $reasonInputEl.addEventListener('click', (el) => {
+          setCurrentSyntax(el.target.value)
+        })
+      })
+  </script>
  </head>
  <body>
   <nav>
@@ -22,76 +63,64 @@
    </h1>
   </header>
   <div class="content">
-   <div class="spec module-type lang-ocaml" id="module-type-Not_inlined">
+   <div class="spec module-type syntax-ocaml" id="module-type-Not_inlined">
     <a href="#module-type-Not_inlined" class="anchor"></a><code><span class="keyword">module</span> <span class="keyword">type</span> <a href="module-type-Not_inlined/index.html">Not_inlined</a> = { ... };</code>
    </div>
    <div>
-    <div class="spec include lang-ocaml">
+    <div class="spec include syntax-ocaml">
      <div class="doc">
       <details open="open">
        <summary>
         <span class="def"><code><span class="keyword">include</span> <a href="module-type-Not_inlined/index.html">Not_inlined</a><span class="keyword">;</span></code></span>
        </summary>
-       <div class="spec type lang-reason" id="type-t">
+       <div class="spec type syntax-ocaml" id="type-t">
         <a href="#type-t" class="anchor"></a><code><span class="keyword">type</span> t;</code>
-       </div>
-       <div class="spec type lang-ocaml" id="type-t">
-        <a href="#type-t" class="anchor"></a><code><span class="keyword">type</span> t</code>
        </div>
       </details>
      </div>
     </div>
    </div>
-   <div class="spec module-type lang-ocaml" id="module-type-Inlined">
+   <div class="spec module-type syntax-ocaml" id="module-type-Inlined">
     <a href="#module-type-Inlined" class="anchor"></a><code><span class="keyword">module</span> <span class="keyword">type</span> <a href="module-type-Inlined/index.html">Inlined</a> = { ... };</code>
    </div>
    <div>
-    <div class="spec include lang-ocaml">
+    <div class="spec include syntax-ocaml">
      <div class="doc">
-      <div class="spec type lang-reason" id="type-u">
+      <div class="spec type syntax-ocaml" id="type-u">
        <a href="#type-u" class="anchor"></a><code><span class="keyword">type</span> u;</code>
-      </div>
-      <div class="spec type lang-ocaml" id="type-u">
-       <a href="#type-u" class="anchor"></a><code><span class="keyword">type</span> u</code>
       </div>
      </div>
     </div>
    </div>
-   <div class="spec module-type lang-ocaml" id="module-type-Not_inlined_and_closed">
+   <div class="spec module-type syntax-ocaml" id="module-type-Not_inlined_and_closed">
     <a href="#module-type-Not_inlined_and_closed" class="anchor"></a><code><span class="keyword">module</span> <span class="keyword">type</span> <a href="module-type-Not_inlined_and_closed/index.html">Not_inlined_and_closed</a> = { ... };</code>
    </div>
    <div>
-    <div class="spec include lang-ocaml">
+    <div class="spec include syntax-ocaml">
      <div class="doc">
       <details>
        <summary>
         <span class="def"><code><span class="keyword">include</span> <a href="module-type-Not_inlined_and_closed/index.html">Not_inlined_and_closed</a><span class="keyword">;</span></code></span>
        </summary>
-       <div class="spec type lang-reason" id="type-v">
+       <div class="spec type syntax-ocaml" id="type-v">
         <a href="#type-v" class="anchor"></a><code><span class="keyword">type</span> v;</code>
-       </div>
-       <div class="spec type lang-ocaml" id="type-v">
-        <a href="#type-v" class="anchor"></a><code><span class="keyword">type</span> v</code>
        </div>
       </details>
      </div>
     </div>
    </div>
-   <div class="spec module-type lang-ocaml" id="module-type-Not_inlined_and_opened">
+   <div class="spec module-type syntax-ocaml" id="module-type-Not_inlined_and_opened">
     <a href="#module-type-Not_inlined_and_opened" class="anchor"></a><code><span class="keyword">module</span> <span class="keyword">type</span> <a href="module-type-Not_inlined_and_opened/index.html">Not_inlined_and_opened</a> = { ... };</code>
    </div>
    <div>
-    <div class="spec include lang-ocaml">
+    <div class="spec include syntax-ocaml">
      <div class="doc">
       <details open="open">
        <summary>
         <span class="def"><code><span class="keyword">include</span> <a href="module-type-Not_inlined_and_opened/index.html">Not_inlined_and_opened</a><span class="keyword">;</span></code></span>
        </summary>
-       <div class="spec type lang-reason" id="type-w">
+       <div class="spec type syntax-ocaml" id="type-w">
         <a href="#type-w" class="anchor"></a><code><span class="keyword">type</span> w;</code>
-       </div>
-       <div class="spec type lang-ocaml" id="type-w">
-        <a href="#type-w" class="anchor"></a><code><span class="keyword">type</span> w</code>
        </div>
       </details>
      </div>
